# gridenc

./: .gitignore  LICENCE  README.MD  pyproject.toml  pyvenv.cfg
gridenc/: gridenclib.py
src/gridenc/: gridenclib.py
test/: test_gridenc.py  tests.py
